tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__number__leading_dot.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/leading_dot.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
UnexpectedToken { expected: [LParen, String, Number, True, False, Nil, Minus, Bang], actual: Token { kind: Dot, loc: craftinginterpreters/test/number/leading_dot.lox:45..46 } }
