tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__number__literals.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/literals.lox
---
success: true
exit_code: 0
----- stdout -----
123
987654
0
-0
123.456
-0.001

----- stderr -----
