tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__number__nan_equality.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/number/nan_equality.lox
---
success: true
exit_code: 0
----- stdout -----
false
true
false
true

----- stderr -----
